--- a/assets/bootstrap-4.5.2/scss/_buttons.scss
+++ b/assets/bootstrap-4.5.2/scss/_buttons.scss
@@ -35,6 +35,7 @@
   &:disabled {
     opacity: $btn-disabled-opacity;
     @include box-shadow(none);
+    background: $primary;
   }
 
   &:not(:disabled):not(.disabled) {
@@ -43,9 +44,11 @@
     &:active,
     &.active {
       @include box-shadow($btn-active-box-shadow);
+      background: $secondary;
 
       &:focus {
         @include box-shadow($btn-focus-box-shadow, $btn-active-box-shadow);
+        background: $secondary;
       }
     }
   }
