--- a/assets/scss/components/_case_details.scss
+++ b/assets/scss/components/_case_details.scss
@@ -58,7 +58,7 @@
           height: 100%;
           top: 0;
           right: -80px;
-          background: rgba($color: $white, $alpha: 0.1);
+          background: rgba($color: $taupe, $alpha: 0.1);
           @include desktop {
             right: -45px;
           }
