--- a/assets/scss/components/_resume-section.scss
+++ b/assets/scss/components/_resume-section.scss
@@ -37,9 +37,9 @@
                 color: $primary;
             }
             p{
-                color: $slate;
+                color: $primary;
             }
-            background: $white;
+            background: $taupe;
             padding: 30px;
             border-radius: 20px;
             margin-bottom: 30px;
