--- a/assets/scss/components/_contact.scss
+++ b/assets/scss/components/_contact.scss
@@ -32,9 +32,9 @@
   display: block;
   width: 100%;
   height: 36px;
-  color: #fff;
+  color: $taupe;
   border-width: 0 0 2px 0;
-  border-color: #fff;
+  border-color: $taupe;
   background-color: transparent;
   font-size: 18px;
   line-height: 26px;
@@ -64,14 +64,14 @@
   font-size: 18px;
   line-height: 26px;
   font-weight: 400;
-  color: #fff;
+  color: $taupe;
   cursor: text;
   transition: transform .2s ease-in-out;
 }
 
 .contact-form .submit-btn {
   display: inline-block;
-  background-color: #DBA435;
+  background-color: $secondary;
   
   border-radius: 600px;
   text-transform: uppercase;
