--- a/assets/scss/components/_footer-section.scss
+++ b/assets/scss/components/_footer-section.scss
@@ -1,5 +1,5 @@
 .footer {
-    background: #141C1C;
+    background: $primary;
     position: relative;
     margin-top: 150px;
     &__background_shape {
@@ -39,7 +39,7 @@
             animation: moveLeft 5s infinite linear;
             svg {
                 path {
-                    fill: #ffffff;
+                    fill: $taupe;
                     opacity: 0.07;
                 }
             }
@@ -57,7 +57,7 @@
                 height: 100%;
                 width: 100%;
                 path {
-                    fill: #ffffff;
+                    fill: $taupe;
                     opacity: 0.07;
                 }
             }
@@ -89,7 +89,7 @@
                     left: -40px;
                     top: 50%;
                     transform: translateY(-50%);
-                    background: #fff;
+                    background: $taupe;
                 }
             }
         }
