--- a/assets/scss/components/_hero-section.scss
+++ b/assets/scss/components/_hero-section.scss
@@ -4,14 +4,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #141C1C;
+  background-color: $primary;
 
   @media(max-width:800px){
     h1{
-      color: $secondary;
+      color: $taupe;
     }
     p{
-      color: $secondary;
+      color: $taupe;
     }
 
   }
@@ -153,7 +153,7 @@
         transform: translate(-50%, -50%);
         height: 60px;
         width: 60px;
-        background: #ffffff;
+        background: $taupe;
         border-radius: 50%;
         z-index: 2;
         transition: all 0.3s ease;
@@ -172,7 +172,7 @@
           background-color: $primary;
           svg {
             path {
-              fill: #ffffff;
+              fill: $taupe;
             }
           }
         }
