--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,7 +21,7 @@
   <link href="{{ $style.Permalink }}" rel="stylesheet" />
 
   {{ "<!--Favicon-->" | safeHTML }}
-  <link rel="shortcut icon" href="{{ "images/favicon.ico" | absURL }}" type="image/x-icon" />
+  <!-- <link rel="shortcut icon" href="{{ "images/favicon.ico" | absURL }}" type="image/x-icon" /> -->
   <link rel="icon" href="{{ "images/favicon.png" | absURL }}" type="image/x-icon" />
 
   {{ "<!-- Google Analytics -->" | safeHTML }}
