--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,7 +1,7 @@
 <section class="hero" id="home">
   <div class="hero_background-svg">
     <svg viewBox="0 0 1437 1180">
-      <path fill="#FFFFFF" d="M0 0h1377l60 1010a120 120 0 01-120 120L0 1180z" data-name="Path 1350" />
+      <path fill="#F3EFE8" d="M0 0h1377l60 1010a120 120 0 01-120 120L0 1180z" data-name="Path 1350" />
     </svg>
   </div>
   <div class="hero_footer-svg">
